# Chart-digitizer

./: LICENSE  README.md  pyproject.toml  requirements.txt
resources/styles/: dark.qss
src/: main.py
src/core/: calibration.py  export.py  plot_area.py  preprocessing.py  project.py
src/gui/: app.py  image_canvas.py  main_window.py  mode_panel.py  point_table.py  settings_dialog.py  start_screen.py  style_dialog.py
src/gui/overlays/: crop_overlay.py  curve_path_overlay.py  point_overlay.py  ref_grid_overlay.py
src/models/: calibration_data.py  project_data.py  series_data.py  types.py
