[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chart-digitizer"
version = "0.1.0"
description = "Desktop application for extracting numerical data from 2D chart images"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "scipy>=1.12",
    "openpyxl>=3.1",
]

[project.scripts]
chart-digitizer = "src.main:main"
